--- a/apps/provider/src/styles/dashboard/_ccr-table.scss
+++ b/apps/provider/src/styles/dashboard/_ccr-table.scss
@@ -43,7 +43,7 @@
         z-index: 2;
 
         &.sticky-column {
-          z-index: 3 !important;
+          z-index: 3;
         }
 
         &.sticky-right {
@@ -61,7 +61,7 @@
 
       &.sticky-column {
         position: sticky;
-        z-index: 1;
+        z-index: 2;
 
         &.sticky-right {
           right: 0;
@@ -77,7 +77,7 @@
 
       &.sticky-column {
         position: sticky;
-        z-index: 1;
+        z-index: 2;
 
         &.sticky-right {
           right: 0;
